zokrates_cli/examples/compile_errors/ambiguous_generic_call.zok
// this should not compile, as A == B

const u32 A = 1;
const u32 B = 1;

def foo(field[A] a) -> bool {
    return true;
}

def foo(field[B] a) -> bool {
    return true;
}

def main() {
    assert(foo([1]));
    return;
}
